---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
try { const result1 = riskyOperation(); } catch (error1) { console.log(error1); }

AST:
(program
  (try_statement
    body: (statement_block
      (lexical_declaration
        (variable_declarator
          name: (identifier "result1")
          value: (call_expression
            function: (identifier "riskyOperation")
            arguments: (arguments)
          )
        )
      )
    )
    handler: (catch_clause
      parameter: (identifier "error1")
      body: (statement_block
        (expression_statement
          (call_expression
            function: (member_expression
              object: (identifier "console")
              property: (property_identifier "log")
            )
            arguments: (arguments
              (identifier "error1")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:13 to 1:20 }, name: "result1", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:23 to 1:39 }, name: "riskyOperation", kind: CallExpression, context: Some("call_expression") },
        Usage { position: { 1:50 to 1:56 }, name: "error1", kind: Identifier, context: None },
        Usage { position: { 1:60 to 1:79 }, name: "console.log", kind: CallExpression, context: Some("call_expression") },
        Usage { position: { 1:60 to 1:67 }, name: "console", kind: Identifier, context: Some("call_expression") },
        Usage { position: { 1:68 to 1:71 }, name: "log", kind: FieldExpression, context: None },
        Usage { position: { 1:72 to 1:78 }, name: "error1", kind: Identifier, context: Some("call_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
